# Site-Haskell

./: Application.hs  Foundation.hs  Home.hs  Main.hs  Routes  SiteHaskell.cabal  client_session_key.aes  routes  stack.yaml
.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  SiteHaskell-0.0.0  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  alex-3.1.7  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  authenticate-1.3.3.2-CSo3XDL0lPKsyoHal2tnA  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  clientsession-0.9.1.2-IpBcpG3jp1KHy8EW2Zpyr3  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  conduit-1.2.8-5FcKXI45VDc6lGPbFuJAWM  conduit-extra-1.1.15-53svZ1V22a02WgMiq2YICw  connection-0.2.6-2HNmlyTwJgHAuxKuraNKr  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-api-0.13.2-LliNhOf849x8qng9ESkbgP  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptohash-conduit-0.1.1-A7dMarJBg4dHM8dTPvP0ZL  (+114 more)
Handler/: Admin.hs  Cliente.hs  Funcionario.hs  Inventario.hs  Login.hs  Relatorio.hs
Handlers/: Inventario.hs  Login.hs  Pessoa.hs  Pessoas.hs  Relatorio.hs
Headers/: Login.hs  Pessoas.hs
Templates/: Application.hs  Foundation.hs  Routes  SiteHaskell.cabal  lista.hamlet
