name:               SiteHaskell
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: Routes

executable          site
  main-is:          Main.hs
  other-modules:    Foundation,
                    Application,
                    Handler.Funcionario,
                    Handler.Relatorio,
                    Handler.Cliente,
                    Handler.Inventario,
                    Handler.Login
                    
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , text                          
                , persistent                    
                , persistent-postgresql
                , aeson
                , monad-logger

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
